fixed a bug with misalignment on ipad-pro

--- a/src/sass/layout/_wrapper.scss
+++ b/src/sass/layout/_wrapper.scss
@@ -7,7 +7,6 @@
 	margin: 10rem auto;
 	margin-bottom: 0;
 
-	width: 950px;
 	max-width: 950px;
 
 	background: white;
