--- a/src/sass/modules/_product.scss
+++ b/src/sass/modules/_product.scss
@@ -68,7 +68,6 @@
 		color: var(--color-white);
 		line-height: 20px;
 		font-size: .7em;
-		text-transform: uppercase;
 	}
 }
 
